Declared functions and added player correctly

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
         
-    <title>Document</title>
+    <title>Iron Ballz</title>
 </head>
 
 <body>
@@ -41,7 +41,15 @@
         </div>
     </div>
     <canvas id="main-board" class="board-game hidden btest" width="800" height="500"></canvas>
+    <!-- Load player.js -->
+    <script src="js/player.js"></script>
+    <!-- Load enemies.js -->
+    <script src="js/enemies.js"></script>
+    <!-- Load food.js -->
+    <script src="js/food.js"></script>
+    <!-- Loads game.js -->
     <script src="js/game.js"></script>
+    <!-- Loads index.js -->
     <script src="js/index.js"></script>
 </body>
 
