Add 2 players with different active skills - JS only

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
             </div>
         </div>
     </div>
-    <canvas id="main-board" class="board-game hidden btest" width="800" height="500"></canvas>
+    <canvas id="main-board" class="board-game hidden btest" width="1200" height="600"></canvas>
+    <!-- Load skills.js -->
+    <script src="js/skills.js"></script>
     <!-- Load player.js -->
     <script src="js/player.js"></script>
     <!-- Load enemies.js -->
