--- a/index.html
+++ b/index.html
@@ -15,36 +15,28 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
 
-    <title>Iron Ballz</title>
+    <title>IronHex Game</title>
 </head>
 
 <body>
     <div class="landing-page">
         <header>
             <div class="col col-md-8 col-md-offset-2">
-                <h1>Iron Ballz</h1>
+                <h1>IronHex</h1>
             </div>
         </header>
         <div class="container">
             <div class="row">
                 <div class="player-area col-sm-4 col-md-offset-4">
-                    <h2>Player 1</h2>
+                    <h2>Player</h2>
                     <form class="form-group">
                         <div class="col-md-10 col-md-offset-1">
                             <input type="text" class="form-control" id="input-player-1" maxlength="20" placeholder="Insert nickname">
                         </div>
                     </form>
                 </div>
-                <div class="player-area col-sm-4 col-md-offset-4">
-                    <h2>Player 2</h2>
-                    <form class="form-group">
-                        <div class="col-md-10 col-md-offset-1">
-                            <input type="text" class="form-control" id="input-player-2" maxlength="20" placeholder="Insert nickname">
-                        </div>
-                    </form>
-                </div>
                 <button type="button" class="btn col-sm-4 col-sm-offset-4 btn-success" id="btn-start">Start</button>
-                <button type="button" class="btn col-sm-4 col-sm-offset-4 btn-primary" id="btn-show-score">Show score</button>
+                <button type="button" class="hidden btn col-sm-4 col-sm-offset-4 btn-primary" id="btn-show-score">Show score</button>
             </div>
         </div>
     </div>
