--- a/index.html
+++ b/index.html
@@ -41,17 +41,15 @@
         </div>
     </div>
     <canvas id="main-board" class="board-game hidden btest" width="1200" height="600"></canvas>
-    <!-- Load skills.js -->
+
+    <script src="js/config.js"></script>
+    <script src="js/input.js"></script>
+    <script src="js/positionable.js"></script>
     <script src="js/skills.js"></script>
-    <!-- Load player.js -->
     <script src="js/player.js"></script>
-    <!-- Load enemies.js -->
     <script src="js/enemies.js"></script>
-    <!-- Load food.js -->
     <script src="js/food.js"></script>
-    <!-- Loads game.js -->
     <script src="js/game.js"></script>
-    <!-- Loads index.js -->
     <script src="js/index.js"></script>
 </body>
 
