--- a/index.html
+++ b/index.html
@@ -28,10 +28,18 @@
         <div class="container">
             <div class="row">
                 <div class="player-area col-sm-4 col-md-offset-4">
-                    <h2>Player</h2>
+                    <h2>Player 1</h2>
                     <form class="form-group">
                         <div class="col-md-10 col-md-offset-1">
                             <input type="text" class="form-control" id="input-player-1" maxlength="20" placeholder="Insert nickname">
+                        </div>
+                    </form>
+                </div>
+                <div class="player-area col-sm-4 col-md-offset-4">
+                    <h2>Player 2</h2>
+                    <form class="form-group">
+                        <div class="col-md-10 col-md-offset-1">
+                            <input type="text" class="form-control" id="input-player-2" maxlength="20" placeholder="Insert nickname">
                         </div>
                     </form>
                 </div>
