--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             </div>
         </div>
     </div>
+    
     <canvas id="main-board" class="board-game hidden btest" width="1200" height="600"></canvas>
 
     <script src="js/config.js"></script>
@@ -56,6 +57,7 @@
     <script src="js/enemies.js"></script>
     <script src="js/food.js"></script>
     <script src="js/game.js"></script>
+    <script src="js/draw.js"></script>
     <script src="js/index.js"></script>
 </body>
 
