--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     <script src="js/player.js"></script>
     <script src="js/enemies.js"></script>
     <script src="js/food.js"></script>
+    <script src="js/movement.js"></script>
     <script src="js/game.js"></script>
     <script src="js/draw.js"></script>
     <script src="js/index.js"></script>
