Enemies also eat snacks and grow on size, life and strength

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
     </div>
     
-    <canvas id="main-board" class="board-game hidden btest" width="1200" height="600"></canvas>
+    <canvas id="main-board" class="board-game hidden" width="1200" height="600"></canvas>
 
     <script src="js/config.js"></script>
     <script src="js/input.js"></script>
