--- a/index.html
+++ b/index.html
@@ -46,14 +46,18 @@
             </div>
         </div>
     </div>
-    
+
     <canvas id="main-board" class="board-game position-absolute hidden"></canvas>
 
     <div id="score" class="container hidden btest">
-        <div id="score-p1" class="score col-sm-6 btest"><h3>Score Player 1</h3></div>
-        <div id="score-p2" class="score col-sm-6 btest"><h3>Score Player 2</h3></div>  
-    </div>  
-    
+        <div id="score-p1" class="score col-sm-6 btest">
+            <h3>Score Player 1</h3>
+        </div>
+        <div id="score-p2" class="score col-sm-6 btest">
+            <h3>Score Player 2</h3>
+        </div>
+    </div>
+
     <script src="js/config.js"></script>
     <script src="js/gen/skills.js"></script>
     <script src="js/input.js"></script>
