--- a/index.html
+++ b/index.html
@@ -19,11 +19,17 @@
 
 <body>
     <div class="landing-page">
+
+        <div class="bg col-lg-12">
+            <img src="./img/bg_overlay.png">
+        </div>
+        
         <header class="main-title container-fluid">
             <div class="col col-md-8 col-md-offset-2">
                 <h1>IronHex</h1>
             </div>
         </header>
+
         <div class="container">
             <div class="row">
                 <div class="player-area col-sm-4 col-md-offset-4">
@@ -42,13 +48,15 @@
                         </div>
                     </form>
                 </div>
-                <button type="button" class="btn col-sm-4 col-sm-offset-4 btn-success" id="btn-start">Start</button>
+                <button type="button" class="btn btn-primary col-sm-4 col-sm-offset-4" id="btn-start">Start</button>
             </div>
         </div>
     </div>
 
     <canvas id="main-board" class="board-game position-absolute"></canvas>
-        <div id="score" class="container">
+    
+        <div id="score" class="container hidden">
+            <div id="btn-reload" class="btn btn-danger hidden">Reload</div>
             <div id="score-p1" class="score col-sm-6">
                 <h4 id="score-p1-name">Score Player 1</h4>
                 <p id="score-p1-text">0</p>
@@ -60,7 +68,6 @@
                 <p id="skill-p2">Active Skill: <span></span></p>
             </div>
         </div>
-
 
     <script src="js/config.js"></script>
     <script src="js/gen/skills.js"></script>
