Cell speed increases if smaller size

--- a/index.html
+++ b/index.html
@@ -70,11 +70,12 @@
         </div>
 
     <script src="js/config.js"></script>
-    <script src="js/gen/skills.js"></script>
     <script src="js/input.js"></script>
+    <script src="js/gen/skills.js"></script>
     <script src="js/main/player.js"></script>
     <script src="js/main/enemies.js"></script>
     <script src="js/main/food.js"></script>
+    <script src="js/gen/damage.js"></script>
     <script src="js/gen/movement.js"></script>
     <script src="js/gen/draw.js"></script>
     <script src="js/game.js"></script>
