--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
     </div>
 
-    <canvas id="main-board" class="board-game position-absolute"></canvas>
+    <canvas id="main-board" class="board-game"></canvas>
     
         <div id="score" class="container hidden">
             <div id="btn-reload" class="btn btn-danger hidden">Reload</div>
