--- a/index.html
+++ b/index.html
@@ -55,17 +55,25 @@
 
     <canvas id="main-board" class="board-game"></canvas>
     
-        <div id="score" class="container hidden">
+    <div id="score" class="container hidden">
             <div id="btn-reload" class="btn btn-danger hidden">Reload</div>
-            <div id="score-p1" class="score col-sm-6">
-                <h4 id="score-p1-name">Score Player 1</h4>
-                <p id="score-p1-text">0</p>
-                <p id="skill-p1">Active Skill: <span></span></p>
-            </div>
-            <div id="score-p2" class="score col-sm-6">
-                <h4 id="score-p2-name">Score Player 2</h4>
-                <p id="score-p2-text">0</p>
-                <p id="skill-p2">Active Skill: <span></span></p>
+            <div class="row">
+                <div id="score-p1" class="score col-md-6">
+                    <h3 id="score-p1-name">Score Player 1</h3>
+                    <ul>
+                        <li><p id="score-p1-text">0</p></li>
+                        <li><p id="life-p1">Life: <span></span></p></li>
+                        <li><p id="skill-p1">Active Skill: <span></span></p></li>
+                    </ul>
+                </div>
+                <div id="score-p2" class="score col-md-6">
+                    <h3 id="score-p2-name">Score Player 2</h3>
+                    <ul>
+                        <li><p id="score-p2-text">0</p></li>
+                        <li><p id="life-p2">Life: <span></span></p></li>
+                        <li><p id="skill-p2">Active Skill: <span></span></p></li>
+                    </ul>
+                </div>
             </div>
         </div>
 
