--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         </div>
                     </form>
                 </div>
-                <button type="button" class="btn btn-primary col-sm-4 col-sm-offset-4" id="btn-start">Start</button>
+                <button type="button" class="btn btn-success col-sm-4 col-sm-offset-4" id="btn-start">Start</button>
             </div>
         </div>
     </div>
