--- a/index.html
+++ b/index.html
@@ -7,10 +7,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" type="image/png" href="img/ironhexIcon.png">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
+
+    <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+        crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
 
@@ -23,7 +32,7 @@
         <div class="bg col-lg-12">
             <img src="./img/bg_overlay.png">
         </div>
-        
+
         <header class="main-title container-fluid">
             <div class="col col-md-8 col-md-offset-2">
                 <h1>IronHex</h1>
@@ -54,28 +63,74 @@
     </div>
 
     <canvas id="main-board" class="board-game"></canvas>
-    
+
     <div id="score" class="container hidden">
-            <div id="btn-reload" class="btn btn-danger hidden">Reload</div>
-            <div class="row">
-                <div id="score-p1" class="score col-md-6">
-                    <h3 id="score-p1-name">Score Player 1</h3>
-                    <ul>
-                        <li><p id="score-p1-text">0</p></li>
-                        <li><p id="life-p1">Life: <span></span></p></li>
-                        <li><p id="skill-p1">Active Skill: <span></span></p></li>
-                    </ul>
-                </div>
-                <div id="score-p2" class="score col-md-6">
-                    <h3 id="score-p2-name">Score Player 2</h3>
-                    <ul>
-                        <li><p id="score-p2-text">0</p></li>
-                        <li><p id="life-p2">Life: <span></span></p></li>
-                        <li><p id="skill-p2">Active Skill: <span></span></p></li>
-                    </ul>
-                </div>
+        <div class="game-over hidden">
+            <h3>Game Over</h3>
+            <button type="button" class="btn btn-success" id="btn-reload">Play Again</button>
+        </div>
+        <div class="row">
+            <div id="score-p1" class="score col-md-6">
+                <h3 id="score-p1-name">Name Player 1</h3>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="progress">
+                                <div id="health-bar-p1" class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0"
+                                    aria-valuemax="150">
+                                    <p>Health</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="progress">
+                                <div id="mana-bar-p1" class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="150" style="width:40%">
+                                    <p>Mana</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                <ul>
+                    <li>
+                        <p id="score-p1-text">0</p>
+                    </li>
+                    <li>
+                        <p id="skill-p1">Active Skill:
+                            <span></span>
+                        </p>
+                    </li>
+                </ul>
+            </div>
+            <div id="score-p2" class="score col-md-6">
+                <h3 id="score-p2-name">Name Player 2</h3>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="progress">
+                                <div id="health-bar-p2" class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="150">
+                                    <p>Health</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="progress">
+                                <div id="mana-bar-p2" class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="150" style="width:40%">
+                                    <p>Mana</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                <ul>
+                    <li>
+                        <p id="score-p2-text">0</p>
+                    </li>
+                    <li>
+                        <p id="skill-p2">Active Skill:
+                            <span></span>
+                        </p>
+                    </li>
+                </ul>
             </div>
         </div>
+    </div>
 
     <script src="js/config.js"></script>
     <script src="js/input.js"></script>
