Added skills (power-ups)

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 <body>
     <div class="landing-page">
 
-        <div class="bg col-lg-12">
-            <img src="./img/bg_overlay.png">
+        <div class="bg container">
+            <!-- <img src="./img/bg_overlay.png"> -->
         </div>
 
         <header class="main-title container-fluid">
@@ -67,7 +67,7 @@
     <div id="score" class="container hidden">
         <div class="game-over hidden">
             <h3>Game Over</h3>
-            <button type="button" class="btn btn-success" id="btn-reload">Play Again</button>
+            <button type="button" class="btn btn-success" id="btn-reload">Quit</button>
         </div>
         <div class="row">
             <div id="score-p1" class="score col-md-6">
